Fix: website scroll-x on iOS

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,6 @@
 html {
 	overflow-x: hidden;
+	width: 100vw;
 	scroll-behavior: smooth;
 }
 
